[project]
name = "pyweathermcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server providing weather alerts and forecasts using the National Weather Service API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.14"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["mcp", "weather", "api", "forecast", "alerts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.18.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/pyweathermcp"
Repository = "https://github.com/yourusername/pyweathermcp"
Issues = "https://github.com/yourusername/pyweathermcp/issues"
